css fixed to avoid too big elements in 4k

--- a/css/style.css
+++ b/css/style.css
@@ -348,10 +348,6 @@ header a {
     text-align: center;
 }
 
-#benefits-section .element-box {
-    aspect-ratio: 1;
-}
-
 #about-us-section .container {
     padding: 4rem 2rem 4rem;
 }
@@ -436,6 +432,7 @@ footer > nav {
 
     #testimonials-section .right-column {
         width: 70%;
+        flex-direction: column;
     }
 
     #benefits-section .container {
@@ -481,6 +478,11 @@ footer > nav {
 
 /* Desktop Layout (from 768px to higher resolutions) */
 @media screen and (min-width: 768px) {
+    img {
+        max-width: 300px;
+    }
+
+
     header .fa-bars {
         display: none;
     }
@@ -538,6 +540,10 @@ footer > nav {
 
     #about-us-section .img-container span {
         font-size: 120px;
+    }
+
+    #about-us-section .img-container {
+        width: 50%;
     }
 
     footer > nav {
